[package]
name = "papi-sys"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>", "Yeonsoo Kim <alkorang@outlook.com>"]
license = "MIT OR Apache-2.0"
build = "build.rs"
links = "papi_wrapper"

edition = "2018"

[dependencies]

[build-dependencies]
bindgen = "0.50"

[dev-dependencies]
lazy_static = "1.4.0"
